Upgrade to Symfony 5

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "@metadata": {
+  },
   "diagram-service": "Diagram Service",
 
   "examples": "Examples:",
@@ -11,19 +13,6 @@
   "mscgen": "Mscgen",
   "plantuml": "PlantUML",
 
-  "png": "PNG",
-  "svg": "SVG",
-  "eps": "EPS",
-  "ismap": "Image Map",
-  "render": "Render",
-
-  "generator-dot-desc": "Directed graphs",
-  "generator-neato-desc": "Undirected graphs",
-  "generator-twopi-desc": "Radial layouts of graphs",
-  "generator-circo-desc": "Circular layout of graphs",
-  "generator-fdp-desc": "Undirected graphs",
-  "generator-sfdp-desc": "Large undirected graphs",
-  "generator-patchwork-desc": "Squarified tree maps",
-  "generator-osage-desc": "Array-based layouts"
+  "render": "Render"
 
 }
