Make types checkboxes work better

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,11 +8,13 @@
   "types": "Output types:",
   "output-type": "Output formats:",
   "source": "Source code:",
+  "output-area":  "Output area",
 
   "graphviz": "Graphviz",
   "mscgen": "Mscgen",
   "plantuml": "PlantUML",
 
-  "render": "Render"
+  "render": "Render",
+  "error": "Error:"
 
 }
